tsconfig/config/iptables.rules
#
# WARNING
# It is recommended that you do not alter or edit this file without experience configuring firewalls with
# iptables.
#
# Problems may not surface till a later software update.  Resolution of problems
# will likely be delayed because of custom modifications to this file.
#iptables.rules for Torrent Server
*nat
:PREROUTING ACCEPT [22:1936]
:POSTROUTING ACCEPT [2:127]
:OUTPUT ACCEPT [2:127]
-A POSTROUTING -s 192.168.201.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.202.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.203.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.204.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.205.0/24 -o eth0 -j MASQUERADE

COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3:364]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT

#Allow SSH and Torrent Browser access
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT

#Uncomment the line below to allow connections on port 443/HTTPS
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT

#Allow all traffic from PGM subnet
-A INPUT -s 192.168.201.0/24 -j ACCEPT
-A INPUT -s 192.168.202.0/24 -j ACCEPT
-A INPUT -s 192.168.203.0/24 -j ACCEPT
-A INPUT -s 192.168.204.0/24 -j ACCEPT
-A INPUT -s 192.168.205.0/24 -j ACCEPT
COMMIT
#
